# localization-rs

./: Cargo.toml  README.md
locale-data/: basic_data.json
recoyx_localization/: Cargo.toml
recoyx_localization/src/: lib.rs  locale.rs  locale_basic_data.rs  locale_map.rs
recoyx_localization/tests/: tests.rs
recoyx_localization_submodule1/: Cargo.toml  README.md
recoyx_localization_submodule1/src/: cldr.rs  errors.rs  exp.rs  lib.rs  sec_6_locales_currencies_tz.rs  sec_8_intl.rs  sec_9_negotiation.rs
recoyx_localization_submodule2/: Cargo.toml  README.md
src/: basic_language_info.rs  country.rs  lib.rs  locale.rs  locale_basic_data.rs  locale_country_data.json  locale_map.rs  tests.rs
src/number_and_date_time_format/: locale_data.json
src/relative_time_format/: locale_data.json
src/test_res/en/: common.json
tests/: tests.rs
tests/res/en/: common.json
