[package]
name = "recoyx_localization"
version = "1.1.1"
authors = ["Klaider <HydroperHH@gmail.com>"]
edition = "2018"
repository = "https://github.com/recoyx/localization-rs"
description = "All-in-one package for flexible localization."
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
language-tag = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.123"
serde_json = "1.0.62"
serde_repr = "0.1.6"
isocountry = "0.3.2"
maplit = "1.0.2"
regex = "1.4.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
futures-await-test = "0.3.0"