[package]
name = "recoyx_localization_submodule1"
version = "0.1.0"
authors = ["Klaider <HydroperHH@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
language-tag = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.123"
serde_json = "1.0.62"
regex = "1.4.3"
maplit = "1.0.2"
intl_pluralrules = "7.0.1"
lazy_static = "1.4.0"
lazy-regex = "0.1.4"